--- a/RSA-Weaknesses-Caused-by-RNG-s-Specifics/references.tex
+++ b/RSA-Weaknesses-Caused-by-RNG-s-Specifics/references.tex
@@ -8,11 +8,17 @@
 
 \bibitem{04} Heninger N., Durumeric Z., Wustrow E., Halderman J. A., Mining Your Ps and Qs: Detection of Widespread Weak Keys in Network Devices, 21 st Security Symposium Security’12, ISBN 978-931971-95-9, Bellevue, WA, pp. 205—220 (2012)
 
+\bibitem{18} Arjen K. Lenstra, James P. Hughes, Maxime Augier, Joppe W. Bos, Thorsten Kleinjung, and Christophe Wachter, “Ron was wrong, Whit is right”, I\&C - School of Computer and Communication Sciences - LACAL - Laboratory for cryptologic algorithms, https://eprint.iacr.org/2012/064.pdf, (2012).
+
+\bibitem{19} Kerry Scharfglass, Darrin Weng, Joseph White, Christopher Lupo, "Breaking weak 1024-bit RSA keys with CUDA", California Polytechnic State University, Dec 2012, Publisher: IEEE, DOI: 10.1109/PDCAT.2012.58ISBN: 978-0-7695-4879-1
+
 \bibitem{05} Li C., Zhang J., Sang L., Gong L., Wang L., Wang A., Wang Y., Deep Learning- Based Security Verification for a Random Number Generator Using White Chaos, Entropy, 22, 1134; doi:10.3390/e22101134 (2020)
 
 \bibitem{06} Singh S., Maakar S. K. and Kumar S., A Performance Analysis of DES and RSA Cryptography, International Journal of Emerging Trends \& Technology in Computer Science (IJETTCS), Volume 2, Issue 3, ISSN 2278-6856 (2013)
 
 \bibitem{07} Velizar Shalamanov, Vladimir Monov, Ivaylo Blagoev, Silvia Matern, Gergana Vassileva, Ivan Blagoev, A Model of ICT Competence Development for Digital Transformation. ISSN 0861-5160 (print), ISSN 1314-2119 (online) (2020)
+
+\bibitem{20} Julian Jang-Jaccard and SuryaNepal, “A survey of emerging threats in cybersecurity,” Journal of Computer and System Sciences 80, no. 5 (2014): 973-993. 
 
 \bibitem{08} Jang-Jaccard J., Nepal S., A survey of emerging threats in cybersecurity. Journal of Computer and System Sciences, 80(5), 973-993 (2014)
 
@@ -33,5 +39,13 @@
 \bibitem{16} Hart J. D., Roy R. and Murphy T. E., Optical random number generation - harvesting entropy from noise and chaos, 51st Annual Conference on Information Sciences and Systems (CISS), doi: 10.1109/CISS.2017.7926165 (2017)
 
 \bibitem{17} Lavasani, A., Eghlidos, T. Practical next bit test for evaluating pseudorandom sequences. Scientia Iranica, 16(1), 19-33 (2009)
+
+\bibitem{21} Dichtl, M. How to predict the output of a hardware random number generator. CHES 2003, 2779, 181-188. (2003) Dichtl, M. How to predict the output of a hardware random number generator. CHES 2003, 2779, 181-188. (2003).
+
+\bibitem{22} Carr J., Simple random number generation, Computers \& Geosciences, 29(10):1269-1275 (2003).
+
+\bibitem{23} L’Ecuyer P., Random Number Generation, In book: Handbook of Simulation: Principles, Methodology, Advances, Applications, and Practice (2007)
+
+\bibitem{24} Camara C., Martín H., Peris-Lopez P., Aldalaien M., Design and Analysis of a True Random Number Generator Based on GSR Signals for Body Sensor Networks, Sensors 19, 2033; doi:10.3390/s19092033 (2019)
 
 \end{thebibliography}
